# llm-alignment

./: .gitignore  Qwen3_Adapters_SoftPrompt_LoRA_KL_SFT_Workshop.executed.ipynb  README.md  dpo_experiments.md  dpo_experiments_mt.md  dpo_train.py  dpo_train_mt.py  dpo_train_mt_v2.py  experiment_log.md  mine_pairs.py  pyproject.toml  sft_experiments_qwen3_1_7b.md  sft_experiments_qwen3_8b.md  sft_train.py
